--- a/package.json
+++ b/package.json
@@ -1,17 +1,38 @@
 {
   "name": "pollybigb",
   "private": true,
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
+  "lint-staged": {
+    "app/**/*.{html,md,js,jsx,json,yml}": [
+      "prettier --write",
+      "eslint --fix"
+    ]
+  },
   "dependencies": {
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
     "@rails/webpacker": "5.4.0",
+    "axios": "^0.21.1",
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "react-router-dom": "^5.2.0",
     "tailwindcss": "1.9.6",
     "webpack": "4.46.0",
     "webpack-cli": "3.3.12"
   },
   "version": "0.1.0",
   "devDependencies": {
+    "babel-eslint": "^10.1.0",
+    "eslint": "^7.27.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-json": "^3.0.0",
+    "eslint-plugin-react": "^7.23.2",
+    "prettier": "^2.3.0",
     "webpack-dev-server": "^3.11.2"
   }
 }
